--- a/weblab_sep30.html
+++ b/weblab_sep30.html
@@ -2,14 +2,75 @@
 <html>
     <head>
         <title>My First Page</title>
+        <style>
+            table {
+                border: 1px solid #FF7536;
+            }
+        </style>
     </head>
     <body>
         <h1>My First Heading</h1>
         <p>This is the first web page of the class I think it's a nice one.</p>
         <ul>
-            <li>My first unordered list item</li>
-            <li>My second unordered list item</li>
-            <li>My third unordered list item</li>
+            <lhead>Social Media</lhead>
+            <li>
+                <a href="http://www.facebook.com" target="_blank">facebook</a>
+            </li>
+            <li>
+                <a href="http://www.twitter.com" target="_blank">twitter</a>
+            </li>
+            <li>
+                <a href="https://plus.google.com/" target="_blank"> google +</a>
+            </li>
         </ul>
+        <table border="1px">
+            <thead>
+                <tr>
+                    <th colspan="2"> Names</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        Connery, Sean
+                    </td>
+                    <td>
+                        1960s-1970s
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Moore, Roger
+                    </td>
+                    <td>
+                        1970s-1980s
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Dalton, Timothy
+                    </td>
+                    <td>
+                        1980s-1990s
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Brosnan, Pierce
+                    </td>
+                    <td>
+                        1990s-2000s
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Craig, Daniel
+                    </td>
+                    <td>
+                        2000s-2010s
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
