--- a/weblab_sep30.html
+++ b/weblab_sep30.html
@@ -3,8 +3,25 @@
     <head>
         <title>My First Page</title>
         <style>
+            * {
+                background-color: white;
+           }
             table {
-                border: 1px solid #FF7536;
+
+            }
+            ul {
+            }
+            td {
+                border: 1px solid black;
+            }
+
+            h1 {
+                background-color: darkred;
+                display: inline;
+            }
+            p {
+                background-color: chartreuse;
+
             }
         </style>
     </head>
