--- a/layout.html
+++ b/layout.html
@@ -41,22 +41,99 @@
                     }*/
                   body {
                       margin: 0;
-                      padding: 8px;
+                      align-self: center;
                   }
+                    #header {
+                      height: 60px;
+                      width: 100%;
+                      color: whitesmoke;
+                      background-color: #464646;
+
+                      margin: -24px 0px -16px 0px;
+                    }
+                    #nav{
+                      color: whitesmoke;
+                      width: 100px;
+                      height: 530px;
+                      background-color: #325a63;
+                      float: left;
+                    }
+                    h1{
+                        margin: 0px;
+                        text-align: center;
+                        line-height: 82px;
+                    }
+                    h2{
+                        margin: 0px
+                    }
+                    #content ul{
+                        width:  100px;
+                        margin: 0px auto;
+                    }
+                    #main{
+                      /*background-color: #325a63;*/
+                    }
+                    #content{
+                      color: whitesmoke;
+                      background-color: #919191;
+                      margin: 20px 4px -12px 104px;
+                      padding: 2px 15px;
+
+                    }
+                  #footer {
+                      height: 40px;
+                      /*width: 100%;*/
+                      color: whitesmoke;
+                      background-color: #464646;
+                    }
+                    .clearfix{
+                        clear: both;
+                    }
                 </style>
             </head>
             <body>
                 <div id="header">
-                    header
+                    <h1>James' webLab Site!</h1>
+                    <!--<h2>Oh! The hotness!!</h2>-->
                 </div>
-                <div id="nav">
-                    nav
+                <div id="main">
+
+
+                    <div id="nav">
+                        <ul>
+                            <li><a href="">menu</a> </li>
+                            <li><a href="">menu</a> </li>
+                            <li><a href="">menu</a> </li>
+                            <li><a href="">menu</a> </li>
+                            <li><a href="">menu</a> </li>
+                            <li><a href="">menu</a> </li>
+                            <li><a href="">menu</a> </li>
+                            <li><a href="">menu</a> </li>
+                            <li><a href="">menu</a> </li>
+                            <li><a href="">menu</a> </li>
+                            <li><a href="">menu</a> </li>
+                            <li><a href="">menu</a> </li>
+
+                    </ul>
                 </div>
                 <div id="content">
-                    content
+                    <H2>Content!</H2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid deserunt fugiat id mollitia nam reprehenderit sapiente tempora temporibus. Ad perspiciatis quasi similique. Animi, at deserunt id nostrum quis soluta totam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam blanditiis deserunt facere ipsa ipsam necessitatibus nemo nostrum rem veniam, voluptatum! Accusamus cumque, illum maxime minima officiis rerum sunt totam. Expedita!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid deserunt fugiat id mollitia nam reprehenderit sapiente tempora temporibus. Ad perspiciatis quasi similique. Animi, at deserunt id nostrum quis soluta totam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam blanditiis deserunt facere ipsa ipsam necessitatibus nemo nostrum rem veniam, voluptatum! Accusamus cumque, illum maxime minima officiis rerum sunt totam. Expedita!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid deserunt fugiat id mollitia nam reprehenderit sapiente tempora temporibus. Ad perspiciatis quasi similique. Animi, at deserunt id nostrum quis soluta totam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam blanditiis deserunt facere ipsa ipsam necessitatibus nemo nostrum rem veniam, voluptatum! Accusamus cumque, illum maxime minima officiis rerum sunt totam. Expedita!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid deserunt fugiat id mollitia nam reprehenderit sapiente tempora temporibus. Ad perspiciatis quasi similique. Animi, at deserunt id nostrum quis soluta totam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam blanditiis deserunt facere ipsa ipsam necessitatibus nemo nostrum rem veniam, voluptatum! Accusamus cumque, illum maxime minima officiis rerum sunt totam. Expedita!</p>
+                    <ul>
+                        <li><a href="www.google.com">Google</a> </li>
+                        <li><a href="www.youtube.com">Youtube</a> </li>
+                        <li><a href="www.gmail.com">Gmail</a> </li>
+                        <li><a href="www.drive.google.com">Drive</a> </li>
+
+                    </ul>
                 </div>
+                <div class="clearfix"></div>
                 <div id="footer">
-                    footer
+                    <p>&copy; 2014 James Sondag.</p>
+                </div>
                 </div>
             </body>
         </html>
