--- a/mine.html
+++ b/mine.html
@@ -24,6 +24,7 @@
                 }
                 #footer {
                     background-color: lightgreen;
+                    text-align: center;
                 }
                 table{
                     margin: 0px auto;
