--- a/mine.html
+++ b/mine.html
@@ -10,6 +10,7 @@
                     text-align: center;
                     padding: 0px;
                     margin: 15px;
+                    top: 0;
                 }
                 #nav {
                     background-color: lightblue;
@@ -25,6 +26,7 @@
                 #footer {
                     background-color: lightgreen;
                     text-align: center;
+                    bottom: 0;
                 }
                 table{
                     margin: 0px auto;
